# wordwonk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  THANKS.md
.agent/workflows/: maintenance.md
helm/: Chart.yaml  values.yaml  values.yaml.example
helm/share/locale/: de.json  en.json  es.json  fr.json  ru.json
helm/templates/: configmap-locales.yaml  db-init-configmap.yaml  ollama.yaml  pv-postgresql.yaml  secrets.yaml
scripts/: backup-db.sh  hunspell-to-lexicon.pl  import-db.sh  socat-keepalives  sync-version.js
srv/backend/: Dockerfile  Makefile  wordwonk.yml
srv/backend/helm/: Chart.yaml  values.yaml
srv/backend/helm/templates/: deployment.yaml
srv/backend/lib/: Wordwank.pm  Wordwonk.pm
srv/backend/lib/Wordwonk/: Schema.pm
srv/backend/schema/: bootstrap.sql
srv/backend/schema/migrations/: 003_add_ai_brain.sql  004_add_mutant_letter.sql
srv/backend/t/: broadcaster.t  end_on_all_played.t  i18n.t  load_test.t  minimal.t  play_notifications.t  quick_bonus.t  rack_constraints.t  scorer.t
srv/backend/t/integration/: 00-setup.t  07-ai-player.t  08-llm-ai-player.t  README.md
srv/backend/t/lib/: TestHelper.pm
srv/frontend/: .env.example  index.html  package.json
srv/frontend/helm/: Chart.yaml  values.yaml
srv/frontend/helm/templates/: configmap.yaml  deployment.yaml
srv/frontend/public/.well-known/: site.webmanifest
srv/frontend/src/: App.jsx  config.js  index.css
srv/wordd/: Cargo.toml
srv/wordd/helm/: Chart.yaml  values.yaml
srv/wordd/helm/templates/: deployment.yaml
srv/wordd/src/: main.rs
(+41 files in other folders)
